--- a/packages/dashboard-frontend/src/overrides.css
+++ b/packages/dashboard-frontend/src/overrides.css
@@ -37,8 +37,12 @@ html.pf-v6-theme-dark .outer-fill {
   padding: 0 !important;
 }
 
-span[class*='label-required'] {
-  color: var(--pf-t--global--color--status--danger--default);
+html:not(.pf-v6-theme-dark) span[class*='label-required'] {
+  color: var(--pf-t--color--red-orange--60);
+}
+
+html.pf-v6-theme-dark span[class*='label-required'] {
+  color: var(--pf-t--color--red-orange--30);
 }
 
 /* Panel border override - only for panels inside page main body */
